--- a/admin.html
+++ b/admin.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
 <meta charset="UTF-8">
@@ -189,8 +189,8 @@
 </div>
 
 <script>
-// ========== 改成你的虚拟机IP ==========
-const VM_IP = "192.168.xxx.xxx"
+// ========== 已修改为你的后端地址 ==========
+const VM_IP = "192.168.1.55"
 
 let currentEditId = null
 
